# text-to-image-devia

./: .env  .gitignore  DockerFile.mlflow  Dockerfile.postgres  README.md  build_and_restart_airflow.sh  depart.py  docker-compose-old.yml  docker-compose-org.yml  docker-compose.yaml  docker-compose.yml  dockerfile  dockerfile.app  note.ipynb  pyproject.toml  script.ipynb  script.sh  script2.ipynb  test_pred.ipynb  wsl-permission-error.sh
.devcontainer/: Dockerfile  devcontainer.json
airflow/dags/: dag_prepare_data.py  dag_train.py
logs/scheduler/: latest
notebooks/: model_Alternative.ipynb  model_Alternative_2.ipynb  model_CNN_LSTM.ipynb  pretraitement.ipynb  pretraitement.py  pretraitement_texte.ipynb  pretraitement_texte_image.ipynb  test.ipynb
pg-init-scripts/: docker_postgres_init.sql
src/text_to_image_devia/experiment/: dockerfile
src/text_to_image_devia/experiments/: dockerfile
src/text_to_image_devia/features/: pretraitement.py
src/text_to_image_devia/models/: DockerFile  dockerfile  train.ipynb  train.py  train_model.py
src/text_to_image_devia/orchestration/dags/: pretraitement.py  tutorial.py
src/text_to_image_devia/orchestration/logs/scheduler/: latest
train/: dockerfile  script.py  tensorflow.sh  train.py
web/: config.yaml  test.py
web/authentification/: app.py  config.yaml  login_widget.py  pretraitement.py
web/authentification/pages/: mdp_oublie.py  mdp_reset.py  nom_utilisateur_oublie.py  nouvel_utilisateur.py
