[project]
name = "text-to-image-devia"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paul21777", email = "paul.theureau@protonmail.com"},
    {name = "Asup45", email = "thibaut.dessolin@gmail.com"},
    {name = "bayarm835", email = "bayarm835@gmail.com"}
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "opencv-python>=4.9.0.80",
    "spacy>=3.7.4",
    "pip>=24.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dependencies]
spacy-model-en-core-web-sm = { path = "C:/Users/GRETA/Documents/GitHub/text-to-image-devia/models/en_core_web_sm-3.0.00" }
