[project]
name = "text-to-image-devia"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paul21777", email = "paul.theureau@protonmail.com"},
    {name = "Asup45", email = "thibaut.dessolin@gmail.com"},
    {name = "bayarm835", email = "bayarm835@gmail.com"},
]
dependencies = [
    "docker>=7.0.0",
    "docker-compose>=1.29.2",
    "spacy>=3.7.4",
    "pandas>=2.2.2",
    "opencv-python>=4.9.0.80",
    "ipykernel>=6.29.4",
    "pip>=24.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
tensorflow = { shell = "bash train/tensorflow.sh" }
wsl-permission-error = { shell ="bash ./wsl-permission-error.sh"}
build-pkg-restart-airflow = { shell = "bash ./build_and_restart_airflow.sh"}